dev: Swagger doc for AuthController
