# app/Http/Controllers/Api/AuthController.php
@@ -3,7 +3,9 @@
 namespace App\Http\Controllers\Api;
 
 use App\Dto\Request\Api\ApiLoginDto;
+use App\Dto\Response\Api\ApiErrorResponseDto;
 use App\Dto\Response\Api\ApiLoginResponseSuccessDto;
+use App\Dto\Response\Api\ApiValidationDto;
 use App\Http\Controllers\Controller;
 use App\Http\Requests\ApiDoLoginRequest;
 use App\Models\User;
@@ -29,39 +31,29 @@ class AuthController extends Controller
         requestBody: new SWG\RequestBody(
             required: true,
             content: new SWG\JsonContent(
-                ref: '#/components/schemas/ApiLoginDto',
+                ref: ApiLoginDto::class,
             ),
         ),
-        responses: [
-            new SWG\Response(
-                response: ResponseAlias::HTTP_OK,
-                description: 'Success credentials. Return access Bearer token.',
-                content: [
-                    new SWG\JsonContent(ref: '#/components/schemas/ApiLoginResponseSuccessDto')
-                ]
-            ),
-            new SWG\Response(
-                response: ResponseAlias::HTTP_FORBIDDEN,
-                description: 'Invalid credentials',
-                content: [
-                    new SWG\JsonContent(ref: '#/components/schemas/ApiErrorResponseDto'),
-                ]
-            ),
-            new SWG\Response(
-                response: ResponseAlias::HTTP_BAD_REQUEST,
-                description: 'Errors',
-                content: [
-                    new SWG\JsonContent(ref: '#/components/schemas/ApiErrorResponseDto'),
-                ],
-            ),
-            new SWG\Response(
-                response: ResponseAlias::HTTP_UNPROCESSABLE_ENTITY,
-                description: 'Validation error',
-                content: [
-                    new SWG\JsonContent(ref: '#/components/schemas/ApiValidationDto'),
-                ],
-            ),
-        ],
+    )]
+    #[SWG\Response(
+        response: ResponseAlias::HTTP_OK,
+        description: 'Success credentials. Return access Bearer token.',
+        content: [new SWG\JsonContent(ref: ApiLoginResponseSuccessDto::class)]
+    )]
+    #[SWG\Response(
+        response: ResponseAlias::HTTP_UNPROCESSABLE_ENTITY,
+        description: 'Validation errors',
+        content: [new SWG\JsonContent(ref: ApiValidationDto::class)]
+    )]
+    #[SWG\Response(
+        response: ResponseAlias::HTTP_BAD_REQUEST,
+        description: 'Errors',
+        content: [new SWG\JsonContent(ref: ApiErrorResponseDto::class)]
+    )]
+    #[SWG\Response(
+        response: ResponseAlias::HTTP_FORBIDDEN,
+        description: 'Validation errors',
+        content: [new SWG\JsonContent(ref: ApiErrorResponseDto::class)]
     )]
     public function login(ApiDoLoginRequest $request): JsonResponse
     {
@@ -85,14 +77,18 @@ class AuthController extends Controller
         path: '/invalidate-token',
         operationId: 'invalidatedAccessToken',
         description: 'Invalidate access token',
-        security: ['apiKey'],
+        security: [['apiKeyBearer' => []]],
     )]
-    #[SWG\Response(response: ResponseAlias::HTTP_NO_CONTENT, description: 'Access token was invalidated')]
+    #[SWG\Response(
+        response: ResponseAlias::HTTP_NO_CONTENT,
+        description: 'Access token was invalidated',
+        content: [new SWG\JsonContent()],
+    )]
     #[SWG\Response(
         response: ResponseAlias::HTTP_UNAUTHORIZED,
         description: 'Error message',
-        content: [new SWG\JsonContent(ref: '#/components/schemas/ApiErrorResponseDto')])
-    ]
+        content: [new SWG\JsonContent(ref: ApiErrorResponseDto::class)]
+    )]
     public function invalidateToken(Request $request): Response
     {
         PersonalAccessToken::findToken($request->bearerToken())->delete();
